--- a/client/src/themes/global-variables.less
+++ b/client/src/themes/global-variables.less
@@ -56,7 +56,6 @@
 @font-size-lg: @font-size-base + 2px;
 @font-size-sm: 12px;
 @input-height-base: @height-base;
-@border-width-base: 1px; // width of the border for a component
 @font-size-sm: 12px;
 @card-head-font-size-sm: @font-size-base;
 @modal-body-padding: @padding-lg;
@@ -64,6 +63,13 @@
 
 @border-color-base: hsv(0, 0, 85%); // base border outline a component
 @border-color-split: hsv(0, 0, 94%); // split border inside a component
+
+// Borders
+@border-color-base: hsv(0, 0, 85%); // base border outline a component
+@border-color-split: hsv(0, 0, 94%); // split border inside a component
+@border-color-inverse: @white;
+@border-width-base: 1px; // width of the border for a component
+@border-style-base: solid; // style of a components border
 
 // from compact.less
 @line-height-base: 1.66667;
