--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.less
@@ -1,104 +1,89 @@
-@import 'themes/global-variables.less';
 @import 'themes/default.less';
 
 :host {
-  &.label-max {
-    .tag-label {
-      overflow: hidden;
-      text-overflow: ellipsis;
+  .label-max-width(@width) {
+    &.label-max-@{width} {
+      .tag-label {
+        max-width: unit(@width, px);
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
-  &.label-max-50 {
-    .tag-label {
-      max-width: 50px;
+
+  .label-max-width(50);
+  .label-max-width(75);
+  .label-max-width(100);
+  .label-max-width(125);
+  .label-max-width(150);
+  .label-max-width(175);
+  .label-max-width(200);
+  .label-max-width(250);
+  .label-max-width(300);
+  .label-max-width(350);
+  .label-max-width(400);
+  .label-max-width(450);
+  .label-max-width(500);
+
+  // add some width to right border
+  &.rejected,
+  &.submitted,
+  &.accepted,
+  &.deprecated {
+    nz-tag {
+      border-right-width: 2px;
     }
   }
-  &.label-max-75 {
-    .tag-label {
-      max-width: 75px;
+  &.rejected,
+  &.deprecated {
+    nz-tag {
+      border-color: lighten(@border-color-base, 5%); // lighten std border color
+      background-color: #fff; // remove background color
+      color: lighten(@tag-default-color, 60%); // lighten text color
     }
   }
-  &.label-max-100 {
-    .tag-label {
-      max-width: 100px;
+  &.submitted {
+    nz-tag {
+      border-color: #ffe58f; // same as @antd-warning-color-outline
     }
   }
-  &.label-max-125 {
-    .tag-label {
-      max-width: 125px;
+  &.accepted {
+    nz-tag {
+      border-color: #b7eb8f; // same as @antd-success-color-outline
     }
   }
-  &.label-max-150 {
-    .tag-label {
-      max-width: 150px;
-    }
-  }
-  &.label-max-200 {
-    .tag-label {
-      max-width: 200px;
-    }
-  }
-  &.label-max-250 {
-    .tag-label {
-      max-width: 250px;
-    }
-  }
-  &.label-max-300 {
-    .tag-label {
-      max-width: 300px;
-    }
-  }
-  &.label-max-400 {
-    .tag-label {
-      max-width: 300px;
-    }
-  }
-  &.label-max-500 {
-    .tag-label {
-      max-width: 500px;
-    }
-  }
+
   &.full-width {
     nz-tag {
       width: 100%;
     }
   }
-  nz-tag {
-    margin-right: 0;
-    //   padding-left: 4px;
-    //   padding-right: 4px;
-    margin-inline-end: 4px;
-  }
-  ::ng-deep &-checkable {
-    background-color: transparent;
-    cursor: pointer;
+}
 
-    &:not(&-checked):hover {
-      color: @primary-color;
-    }
+nz-tag {
+  margin-right: 0;
+  margin-inline-end: 4px;
+}
+::ng-deep &-checkable {
+  background-color: transparent;
+  cursor: pointer;
 
-    &:active,
-    &-checked {
-      color: @text-color-inverse;
-    }
-
-    &-checked {
-      background-color: @primary-6;
-    }
-
-    &:active {
-      background-color: @primary-7;
-    }
+  &:not(&-checked):hover {
+    color: @primary-color;
   }
 
-  // ::ng-deep .ant-tag-checkable {
-  //   border: 1px solid #f0f0f0;
-  //   color: #999;
-  // }
-  // ::ng-deep .ant-tag-checkable {
-  //   border: 1px solid #f0f0f0;
-  //   color: #999;
-  // }
+  &:active,
+  &-checked {
+    color: @text-color-inverse;
+  }
+
+  &-checked {
+    background-color: @primary-6;
+  }
+
+  &:active {
+    background-color: @primary-7;
+  }
 }
 
 .default {
