--- a/client/src/app/forms2/components/attribute-tag/attribute-tag.component.less
+++ b/client/src/app/forms2/components/attribute-tag/attribute-tag.component.less
@@ -50,8 +50,11 @@
   }
 }
 
-.menu-item {
+.compact {
   .default();
+}
+
+.menu-item {
   nz-tag {
     // border: @border-width-base @border-style-base @border-color-base;
     background-color: white;
