--- a/client/src/app/forms2/components/entity-tag-list/entity-tag-list.component.html
+++ b/client/src/app/forms2/components/entity-tag-list/entity-tag-list.component.html
@@ -11,52 +11,20 @@
     "></ng-container>
 </ng-container>
 
-<!-- if hidden entities exist, show entity collection tag -->
-<ng-container *ngIf="hiddenEntities.length > 0">
-  <!-- display icon for each hidden entity if entity count < cvcShowCountMax -->
-  <div class="entity-icon-group">
-    <ng-container
-      *ngIf="hiddenEntities.length <= cvcShowCountMax; else showCount">
-      <nz-tag>
-        <span
-          class="plus-sign"
-          nz-typography
-          nzType="secondary">
-          <strong>+</strong>
-        </span>
-        <span
-          *ngFor="let entity of hiddenEntities"
-          class="entity-icon"
-          nz-icon
-          [nzType]="entity.__typename | typenameToIcon"
-          nzTheme="twotone"
-          [nzTwotoneColor]="entity.__typename | entityColor"></span>
-      </nz-tag>
-    </ng-container>
-
-    <!-- show entity count if hidden entity count > cvcShowCountMax -->
-    <ng-template #showCount>
-      <nz-tag *ngSwitchCase="false">
-        <!-- plus icon -->
-        <span
-          class="plus-sign"
-          nz-typography
-          nzType="secondary">
-          <strong>+</strong>
-        </span>
-        <span
-          class="entity-count"
-          nz-typography
-          nzType="secondary">
-          <strong>{{ hiddenEntities.length }}</strong>
-        </span>
-        <span
-          class="entity-icon"
-          nz-icon
-          [nzType]="hiddenEntities[0].__typename | typenameToIcon"
-          nzTheme="twotone"
-          [nzTwotoneColor]="hiddenEntities[0].__typename | entityColor"></span>
-      </nz-tag>
-    </ng-template>
-  </div>
+<!-- show entity collection tag if config prepared -->
+<ng-container *ngIf="tagCollectionConfig !== undefined">
+  <cvc-entity-collection-tag
+    [cvcCollectionTagConfig]="tagCollectionConfig"
+    [cvcTagTemplate]="cvcTagTemplate"
+    [cvcShowCountMax]="1"></cvc-entity-collection-tag>
 </ng-container>
+
+<span
+  nz-icon
+  nzType="bug"
+  nz-tooltip
+  [nzTooltipTitle]="debugTmpl">
+  <ng-template #debugTmpl>
+    <pre>{{ tagCollectionConfig | json }}</pre>
+  </ng-template></span
+>
