improved entity-tag-list styles; misc layout/style adjustments

--- a/client/src/app/forms2/components/empty-value/empty-value.component.less
+++ b/client/src/app/forms2/components/empty-value/empty-value.component.less
@@ -1,7 +1,8 @@
 .empty-symbol {
   font-size: 0.9em;
   font-style: oblique;
-  cursor: default;
+  display: inline-block;
+  cursor: help;
   white-space: no-wrap;
   &.not-applicable {
     color: #ccc;
