--- a/client/src/app/forms2/components/entity-collection-tag/entity-collection-tag.component.less
+++ b/client/src/app/forms2/components/entity-collection-tag/entity-collection-tag.component.less
@@ -1,10 +1,14 @@
 :host {
   display: inline-block;
 }
+.popover-container {
+  max-width: 300px;
+}
 nz-tag {
   margin: 0;
   padding: 0;
   margin-inline-end: 4px;
+  cursor: help;
   span {
     display: inline-block;
   }
