code cleanup, variable name, comment improvements

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -7,7 +7,7 @@
     [nzData]="(row$ | ngrxPush) || []"
     cvcTableScroller
     (cvcTableScrollerOnScroll)="onScroll$.next($event)"
-    (cvcTableScrollerOnFetch)="onFetch$.next($event)"
+    (cvcTableScrollerOnFetch)="onFetchMore$.next($event)"
     [cvcTableScrollerQueryRef]="queryRef"
     [cvcTableScrollerPageInfo]="pageInfo$ | ngrxPush"
     [cvcTableScrollerToIndex]="(scrollToIndex$ | ngrxPush)!"
