--- a/client/src/app/forms2/config/variantgroup-revise/variantgroup-revise.form.html
+++ b/client/src/app/forms2/config/variantgroup-revise/variantgroup-revise.form.html
@@ -1,1 +1,12 @@
-<p>variantgroup-revise works!</p>
+<form
+  [formGroup]="form"
+  nz-form
+  nzLayout="vertical"
+  (ngSubmit)="onSubmit(model)">
+  <formly-form
+    [form]="form"
+    [fields]="fields"
+    [model]="model"
+    (modelChange)="model = $event">
+  </formly-form>
+</form>
