add top bar link to docs

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -286,6 +286,11 @@
             <li nz-menu-item
               nzSelected
               nzMatchRouter>
+              <a target="_blank" href="https://docs.civicdb.org/">Documentation</a>
+            </li>
+            <li nz-menu-item
+              nzSelected
+              nzMatchRouter>
               <a routerLink="/pages/help">Help</a>
             </li>
           </ul>
